# vn2

./: .gitignore  ABLATION_READY.md  ADVANCED_FORECASTING_ANALYSIS.md  AFTERNOON_RUN_PLAN.md  CHALLENGER_READY.md  COMPARISON_SUMMARY.md  DEVELOPER_GUIDE.md  ENSEMBLE_RESULTS.md  ENSEMBLE_SUMMARY.md  EVALUATION_READY.md  EVALUATION_RESULTS_SUMMARY.md  EVALUATION_V3_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_SEQUENTIAL.md  LAUNCH_COMMAND.md  MODEL_STATUS.md  OPTIMIZATION_SUMMARY.md  ORDER_ANALYSIS_SUMMARY.md  OVERNIGHT_RUN_STATUS.md  README.md  REPRODUCIBILITY_CHECKLIST.md  RUN_SIP_EVAL.md  SEQUENTIAL_BACKTEST_SUMMARY.md  SEQUENTIAL_EVAL_GUIDE.md  SIP_IMPLEMENTATION.md  SIP_READY.md  SURD_SLURP_READY.md  TRAIN_SURD_SLURP.sh  activate.sh  backlog.md  check_sip_ready.sh  go  pyproject.toml  requirements.txt  run_notebook.sh  run_seq12_eval.sh  startup.sh  verify_ready.sh
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
configs/: base.yaml  forecast.yaml  uncertainty.yaml
docs/: DATA_INGESTION_GUIDE.md  DATA_INVENTORY.md  EDA_REGIME_ENSEMBLE_SELECTOR_ROADMAP.md  ENTROPY_REGIME_FRAMEWORK_VN2.md  FORECAST_ERROR_SUMMARY.md  HOW_WE_BEAT_THE_WINNER.md  Instructions.md  LESSONS_LEARNED_MEETUP.md  LOGIC_FORECAST_CHECKLIST.md  NEXT_TWO_WEEKS.md  RECOMMENDED_NEXT_STEPS_2026-03-12.md  STOCKOUT_IMPUTATION.md  VN2_BACKTESTING_SPRINT_PROMPT.md  WHY_NOT_BEAT_BENCHMARK.md  WORK_LOG_2026_03_05.md  backtesting_against_competition.md  cursor_prompt_backlog_update.md  szablowski_arxiv_2601_18919_summary.md  (+1 more)
scripts/: check_status.sh  (+54 more)
(+7725 files in other folders)
